test_files/fails/t_no_delay_in_delay.ar
let foo = \(x : int) -> delay ((x, delay x));

console <- never;
